Fix misalignment.

--- a/resources/public/css/wufoo.css
+++ b/resources/public/css/wufoo.css
@@ -4,7 +4,6 @@ html {
 body {
   margin:17px 0 15px 0;
   padding:0;
-  text-align:center;
   font-size:small;
   font-family:"Lucida Grande",Tahoma,Arial,Verdana,sans-serif;
 }
